[gd_scene load_steps=2 format=3 uid="uid://sp4ok58gd2rb"]

[ext_resource type="Script" uid="uid://cwabjipmnymnj" path="res://scenes/menu/save_menu.gd" id="1_28ran"]

[node name="SaveMenu" type="Node2D"]
texture_filter = 1
script = ExtResource("1_28ran")

[node name="SavesScroller" type="ScrollContainer" parent="."]
offset_left = 792.0
offset_top = 64.0
offset_right = 1112.0
offset_bottom = 656.0

[node name="VBoxContainer" type="VBoxContainer" parent="SavesScroller"]
layout_mode = 2
alignment = 1

[node name="NewSaveButton" type="Button" parent="."]
offset_left = 800.0
offset_top = 976.0
offset_right = 1120.0
offset_bottom = 1072.0
text = "Create New Save"

[node name="HardcoreButton" type="Button" parent="."]
offset_left = 832.0
offset_top = 896.0
offset_right = 1088.0
offset_bottom = 960.0
toggle_mode = true
text = "Hardcore"

[node name="Difficulty" type="HSlider" parent="."]
offset_left = 800.0
offset_top = 872.0
offset_right = 1120.0
offset_bottom = 896.0
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10

[node name="DifficultyLabel" type="Label" parent="Difficulty"]
layout_mode = 0
offset_left = 16.0
offset_top = -16.0
offset_right = 128.0
offset_bottom = 7.0
text = "Difficulty: 1"

[node name="LogOutButton" type="Button" parent="."]
offset_left = 1664.0
offset_top = 960.0
offset_right = 1856.0
offset_bottom = 1024.0
text = "Log Out"

[node name="Name" type="LineEdit" parent="."]
offset_left = 800.0
offset_top = 760.0
offset_right = 1120.0
offset_bottom = 856.0
placeholder_text = "Save Name"
alignment = 1

[connection signal="pressed" from="NewSaveButton" to="." method="_on_new_save_button_pressed"]
[connection signal="drag_ended" from="Difficulty" to="." method="_on_difficulty_drag_ended"]
[connection signal="pressed" from="LogOutButton" to="." method="_on_log_out_button_pressed"]
